--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter_bloc: ^8.0.1
   equatable: ^2.0.3
+  uuid: ^3.0.6
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
