--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ environment:
 
 dependencies:
   flutter_bloc: ^8.0.1
+  bloc_test: ^9.0.3
   equatable: ^2.0.3
   uuid: ^3.0.6
   flutter:
@@ -31,6 +32,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  test: ^1.21.0
 
   flutter_lints: ^2.0.0
 flutter:
